--- a/services/auth-services/tsconfig.json
+++ b/services/auth-services/tsconfig.json
@@ -29,7 +29,8 @@
   },
   "include": [
     "src/**/*",
-    "../../shared/**/*"
+    "../../shared/**/*",
+    "prisma.config.ts"
   ],
   "exclude": [
     "node_modules",
