--- a/services/user-service/package.json
+++ b/services/user-service/package.json
@@ -7,10 +7,17 @@
     "dev": "nodemon --exec \"node -r dotenv/config -r ts-node/register -r tsconfig-paths/register src/index.ts\""
   },
   "dependencies": {
+    "@prisma/adapter-pg": "^7.3.0",
+    "@prisma/client": "^7.3.0",
+    "@types/node": "^25.2.1",
+    "@types/pg": "^8.16.0",
+    "axios": "^1.13.4",
     "cors": "^2.8.6",
     "dotenv": "^17.2.4",
     "express": "^5.2.1",
     "helmet": "^8.1.0",
+    "pg": "^8.18.0",
+    "prisma": "^7.3.0",
     "tsconfig-paths": "^4.2.0"
   },
   "devDependencies": {
