--- a/shared/package.json
+++ b/shared/package.json
@@ -10,7 +10,8 @@
   "description": "",
   "dependencies": {
     "express": "^5.2.1",
-    "jsonwebtoken": "^9.0.3"
+    "jsonwebtoken": "^9.0.3",
+    "kafkajs": "^2.2.4"
   },
   "devDependencies": {
     "@types/express": "^5.0.6",
