--- a/shared/package.json
+++ b/shared/package.json
@@ -11,7 +11,8 @@
   "dependencies": {
     "express": "^5.2.1",
     "jsonwebtoken": "^9.0.3",
-    "kafkajs": "^2.2.4"
+    "kafkajs": "^2.2.4",
+    "uuid": "^13.0.0"
   },
   "devDependencies": {
     "@types/express": "^5.0.6",
