--- a/api-gateway/package.json
+++ b/api-gateway/package.json
@@ -12,6 +12,7 @@
     "dotenv": "^17.2.4",
     "express": "^5.2.1",
     "helmet": "^8.1.0",
+    "http-proxy-middleware": "^3.0.5",
     "jsonwebtoken": "^9.0.3"
   },
   "devDependencies": {
