--- a/services/notes-services/package.json
+++ b/services/notes-services/package.json
@@ -18,6 +18,7 @@
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
     "helmet": "^8.1.0",
+    "joi": "^18.0.2",
     "tsconfig-paths": "^4.2.0"
   },
   "devDependencies": {
