--- a/shared/package.json
+++ b/shared/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "shared",
+  "name": "@microservices-practice/shared",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "dist/index.js",
+  "types": "dist/index.d.ts",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
     "build": "tsc"
   },
   "author": "",
