--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -48,6 +48,37 @@ services:
       start_period: 40s
     restart: unless-stopped
 
+
+  auth-services:
+    build:
+      context: .
+      dockerfile: services/auth-services/Dockerfile
+    container_name: microservice-auth-services
+    environment:
+      - NODE_ENV=production
+      - PORT=3001
+      - DATABASE_URL=postgresql://microservices:microservices123@postgres:5432/microservices
+      - CORS_ORIGIN=http://localhost:3000
+      - CORS_CREDENTIALS=true
+    ports:
+      - "3001:3001"
+    depends_on:
+      postgres:
+        condition: service_healthy
+    networks:
+      - microservice-network
+    healthcheck:
+      test:
+        [
+          "CMD-SHELL",
+          "wget --no-verbose --tries=1 --spider http://localhost:3001/health || exit 1",
+        ]
+      interval: 30s
+      timeout: 10s
+      retries: 3
+      start_period: 40s
+    restart: unless-stopped
+
 volumes:
   postgres_data:
 
