--- a/services/auth-services/package.json
+++ b/services/auth-services/package.json
@@ -20,6 +20,7 @@
     "express": "^5.2.1",
     "helmet": "^8.1.0",
     "jsonwebtoken": "^9.0.3",
+    "joi": "^18.0.2",
     "tsconfig-paths": "^4.2.0"
   },
   "devDependencies": {
