--- a/services/auth-services/tsconfig.json
+++ b/services/auth-services/tsconfig.json
@@ -3,40 +3,20 @@
     "target": "ES2020",
     "module": "commonjs",
     "lib": ["ES2020"],
-    "types": ["node"],
+    // "outDir": "./dist",
+    "rootDir": "./src",
     "outDir": "./dist",
-    "strict": false,
+    "strict": true,
     "esModuleInterop": true,
     "skipLibCheck": true,
     "forceConsistentCasingInFileNames": true,
     "resolveJsonModule": true,
     "declaration": true,
-    "declarationMap": true,
     "sourceMap": true,
     "removeComments": true,
-    "noImplicitAny": true,
-    "strictNullChecks": true,
-    "strictFunctionTypes": true,
-    "noImplicitThis": true,
-    "noImplicitReturns": true,
-    "noFallthroughCasesInSwitch": true,
     "moduleResolution": "node",
     "baseUrl": "./"
-    // "paths": {
-    //   "@/*": ["src/*"],
-    //   "@shared/*": ["../../shared/*"]
-    // }
   },
   "include": ["src/**/*"],
   "exclude": ["node_modules", "dist", "**/*.test.ts"]
-  // "include": [
-  //   "src/**/*",
-  //   "../../shared/**/*",
-  //   "prisma.config.ts"
-  // ],
-  // "exclude": [
-  //   "node_modules",
-  //   "dist",
-  //   "**/*.test.ts"
-  // ]
 }
