--- a/services/auth-services/tsconfig.json
+++ b/services/auth-services/tsconfig.json
@@ -13,12 +13,14 @@
     "declaration": true,
     "declarationMap": true,
     "sourceMap": true,
-    "baseUrl": ".",
-    "paths": {
-      "@microservices-practice/shared": ["/app/shared/src/index.ts"],
-      "@microservices-practice/shared/*": ["/app/shared/src/*"]
-    }
+    "moduleResolution": "node",
+    "noImplicitAny": true,
+    "strictNullChecks": true,
+    "strictFunctionTypes": true,
+    "noImplicitThis": true,
+    "noImplicitReturns": true,
+    "noFallthroughCasesInSwitch": true
   },
   "include": ["src/**/*"],
-  "exclude": ["node_modules", "dist"]
+  "exclude": ["node_modules", "dist", "**/*.test.ts", "**/*.spec.ts"]
 }
