--- a/services/auth-services/Dockerfile.dev
+++ b/services/auth-services/Dockerfile.dev
@@ -5,28 +5,26 @@ RUN apk add --no-cache dumb-init postgresql-client wget
 
 WORKDIR /app
 
-# ── Install shared's runtime deps (kafkajs, jsonwebtoken, etc.) ──────────────
-# We install deps ONLY — no source copy, no build.
-# shared/src is mounted as a live volume at /app/shared/src
-# tsconfig paths resolves @microservices-practice/shared -> /app/shared/src/index.ts
-COPY shared/package.json ./shared/package.json
-COPY shared/yarn.lock* ./shared/
+# ── 1. Build shared into /app/shared/dist ────────────────────────────────────
+COPY shared/ ./shared/
 WORKDIR /app/shared
-RUN yarn install --production=false
+RUN yarn install --production=false && yarn build
 
-# ── Install service deps ──────────────────────────────────────────────────────
+# ── 2. Install service deps ───────────────────────────────────────────────────
 WORKDIR /app/services/auth-services
 COPY services/auth-services/package.json ./package.json
 COPY services/auth-services/yarn.lock* ./
 
+# Replace workspace dep with a file: reference pointing to built shared
 RUN node -e " \
   const fs = require('fs'); \
   const pkg = JSON.parse(fs.readFileSync('package.json', 'utf8')); \
-  delete pkg.dependencies['@microservices-practice/shared']; \
+  pkg.dependencies['@microservices-practice/shared'] = 'file:/app/shared'; \
   fs.writeFileSync('package.json', JSON.stringify(pkg, null, 2)); \
 "
 RUN yarn install
 
 EXPOSE 3001
 
+WORKDIR /app/services/auth-services
 CMD ["sh", "-c", "npx prisma generate && yarn dev"]
