--- a/services/notes-services/package.json
+++ b/services/notes-services/package.json
@@ -7,7 +7,7 @@
   "type": "commonjs",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon --exec \"node -r dotenv/config -r ts-node/register -r tsconfig-paths/register src/index.ts\"",
+    "dev": "nodemon --watch src --ext ts,js,json --exec \"node -r dotenv/config -r ts-node/register -r tsconfig-paths/register src/index.ts\"",
     "test": "jest"
   },
   "dependencies": {
