--- a/docker-compose.dev.yaml
+++ b/docker-compose.dev.yaml
@@ -126,7 +126,8 @@ services:
     environment:
       - NODE_ENV=development
       - PORT=3003
-      - DATABASE_URL=postgresql://microservices:microservices123@postgres:5432/notes_db
+      # - DATABASE_URL=postgresql://microservices:microservices123@postgres:5432/notes_db
+      - DATABASE_URL=postgresql://notes_user:notes_pass@postgres:5432/notes_db
       - CORS_ORIGIN=http://localhost:3000
       - CORS_CREDENTIALS=true
     ports:
@@ -164,7 +165,8 @@ services:
     environment:
       - NODE_ENV=development
       - PORT=3001
-      - DATABASE_URL=postgresql://microservices:microservices123@postgres:5432/auth_db
+      # - DATABASE_URL=postgresql://microservices:microservices123@postgres:5432/auth_db
+      - DATABASE_URL=postgresql://auth_user:auth_pass@postgres:5432/auth_db
       - CORS_ORIGIN=http://localhost:3000
       - CORS_CREDENTIALS=true
       - JWT_SECRET=dev-jwt-secret-not-for-production
