--- a/api-gateway/package.json
+++ b/api-gateway/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "dev": "nodemon --exec \"node -r dotenv/config -r ts-node/register -r tsconfig-paths/register src/index.ts\"",
+    "dev": "nodemon --watch src --ext ts,js,json --exec \"node -r dotenv/config -r ts-node/register -r tsconfig-paths/register src/index.ts\"",
     "test": "jest"
   },
   "dependencies": {
